user thymeleaf tested, added table borders

--- a/src/main/resources/templates/user/active-reservations.html
+++ b/src/main/resources/templates/user/active-reservations.html
@@ -2,6 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <style>
+        table {
+            border-collapse: collapse;
+        }
+
+        th, td {
+            border: 1px solid black;
+            padding: 8px;
+        }
+    </style>
     <title>User Reservations</title>
 </head>
 <body>
