--- a/src/main/resources/templates/search/events.html
+++ b/src/main/resources/templates/search/events.html
@@ -15,6 +15,18 @@
     <title>Search Results - Events</title>
 </head>
 <body>
+
+<form th:action="@{/searchEvents}" method="post">
+    <!-- Form fields for searching events -->
+    <input type="text" name="event_name" th:value="${eventName}" placeholder="Event Name">
+    <input type="text" name="event_time" th:value="${eventTime}" placeholder="Event Time">
+
+    <button type="submit">Search</button>
+</form>
+<form method="get"
+      th:action="@{/searchEvents}">
+    <button type="submit">New Search</button>
+</form>
 <h1>Search Results - Events</h1>
 
 <table>
@@ -23,7 +35,6 @@
         <th>Event Name</th>
         <th>Description</th>
         <th>Event Time</th>
-        <th>Number of Attendees</th>
     </tr>
     </thead>
     <tbody>
@@ -31,9 +42,16 @@
         <td th:text="${event.eventName}"></td>
         <td th:text="${event.description}"></td>
         <td th:text="${event.eventTime}"></td>
-        <td th:text="${event.numAttendees}"></td>
     </tr>
     </tbody>
 </table>
+<form method="post"
+      th:action="@{/searchEvents(event_name=${eventName}, event_time=${eventTime}, page=${page != null ? page + 1 : 1})}">
+    <button type="submit">Next Page</button>
+</form>
+<form method="post"
+      th:action="@{/searchEvents(event_name=${eventName}, event_time=${eventTime}, page=${page != null ? page -1 : 1})}">
+    <button type="submit">Previous Page</button>
+</form>
 </body>
 </html>
